# FDA

./: pyproject.toml
sample_application/: main.py  parse_and_summarize.py  pdf_to_image.py  prompts.env
